--- a/src/03-feedback.html
+++ b/src/03-feedback.html
@@ -14,11 +14,11 @@
     <form class="feedback-form" autocomplete="off">
       <label>
         Email
-        <input type="email" name="email" autofocus />
+        <input type="email" name="email" autofocus required="true" />
       </label>
       <label>
         Message
-        <textarea name="message" rows="8"></textarea>
+        <textarea name="message" rows="8" required="true"></textarea>
       </label>
       <button type="submit">Submit</button>
     </form>
